# AutoCounter

./: .gitignore  CMakeLists.txt  README.md  icon_config.rc
includes/: mainwindow.h  ui.h
srcs/: mainwindow.cpp  ui.cpp
